--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,41 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* 1. Import all fonts */
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,500;0,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:ital,wght@0,300;0,400;0,500;0,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600&display=swap");
+
+@import "tailwindcss";
+
+@plugin "daisyui" {
+  themes: light --default;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #22c1ad;
+  --color-secondary: #d72050;
+  --color-primary-200: #f3f3f3;
+  --color-primary-300: #2cceba;
+  --color-primary-500: #436255;
+  --color-primary-600: #23d05f;
+  /* --color-accent: #706f6f; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* 3. Define custom font utilities using @layer */
+@theme {
+  --font-bri: Bricolage Grotesque, "sans-serif";
+
+  --font-dm: DM Sans, "sans-serif";
+
+  --font-inter: Inter, "sans-serif";
+
+  --font-outfit: Outfit, "sans-serif";
+
+  --font-rubik: Rubik, "sans-serif";
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+/* * {
+  font-family: "Outfit", sans-serif;
+} */
