--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,18 @@
   --font-rubik: Rubik, "sans-serif";
 }
 
+.text-border {
+  -webkit-text-stroke: 1px black; /* same as Figma stroke weight & color */
+  -webkit-text-fill-color: white; /* your text fill color */
+}
+
+.outline-title {
+  font-family: sans-serif;
+  color: white;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000;
+}
+
 /* * {
   font-family: "Outfit", sans-serif;
 } */
