hero section : style : inside single card

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,7 @@
 }
 
 .outline-title {
-  font-family: sans-serif;
-  color: white;
+  /* font-family: sans-serif; */
   text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
     -1px 1px 0 #000;
 }
